# fake-docs-generator

./: .gitignore  README.md  generate_fake_docs_v2.py  main.py  pyproject.toml  test_generation.py  v1.py  v2.py
.streamlit/: config.toml
generators/: __init__.py  base_generator.py  bir_generator.py  bpi_generator.py  coe_generator.py  globe_generator.py  maynilad_generator.py  meralco_generator.py  passport_generator.py
