[project]
name = "fake-docs"
version = "0.1.0"
description = "Fake document generator for AI fraud detection testing"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faker>=37.8.0",
    "reportlab>=4.4.4",
    "streamlit>=1.50.0",
    "matplotlib>=3.9.0",
    "pillow>=11.0.0",
    "qrcode>=8.0.0",
]
